========================================================================

libmikmod v3.3.11 was released on XX-XXX-XXXX.

- Fixed lots of possible crashes in several module loaders and in mmcmp
  depacker, using the fuzzing data kindly provided by Lionel Debroux.
- Fixed a possible endless loop in the IT loader with malformed files.
- Support for building the Windows version using Open Watcom compiler.
- A few minor OS/2 fixes.
- CMake updates.
- Other minor fix/tidy-ups.


Summary of changes between libmikmod 3.3.9 and libmikmod 3.3.10:
========================================================================

libmikmod v3.3.10 was released on 31-Aug-2016.

- Fixed windows builds when UNICODE is defined. (Thanks S. Michel).


Summary of changes between libmikmod 3.3.8 and libmikmod 3.3.9:
========================================================================

libmikmod v3.3.9 was released on 12-Aug-2016.

- Amiga, AHI driver: Fixed a crash upon driver shutdown.
- Amiga: Updates. Added standalone makefiles with cross-build support.
- RAW file writer: Changed to use ansi stdio functions instead of
  posix unistd, for better portability.
- Playercode: Allocate the right channel reverb buffers only if the
  mixer is setup for stereo mode. (Helps with ports to memory-tight
  platforms. Patch from Andrew Rossignol.)
- Fixed access to uninitialized memory in the simpleplayMEM example
  program.
- Added a configuration option to exclude the hqmixer (off by default.)
- Using locale-insensitive ctype.h and casecmp functions in library.
- Configury: New --disable-alldrv option to disable all of the audio
  output drivers.  If additional --enable-xxx options are given, the
  specified drivers will be enabled.


Summary of changes between libmikmod 3.3.7 and libmikmod 3.3.8:
========================================================================

libmikmod v3.3.8 was released on 15-Nov-2015.

- Handle the FastTracker2 pattern loop (E60) bug. Modules abusing this